Wed Jun 17 16:35:37 1998  Tom Yu  <tlyu@mit.edu>

	* cnv_tkt_skey.c (krb524_convert_tkt_skey): Handle null address
	fields; actually use saddr (the address from the UDP header) to
	generate the ticket address rather than just checking against it.

	* conv_creds.c (krb524_convert_creds_plain): Punt address checks.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* k524init.c (main): POSIX states that getopt returns -1
		when it is done parsing options, not EOF.

Wed Feb 18 16:04:44 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (thisconfigdir): Remove trailing slash.

Thu Feb 12 21:58:56 1998  Tom Yu  <tlyu@mit.edu>

	* sendmsg.c: Explicitly include k5-int.h in order to get proper
	prototype of krb5_locate_kdc().

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Dec 11 23:30:30 1997  Tom Yu  <tlyu@mit.edu>

	* cnv_tkt_skey.c:
	* conv_creds.c:
	* conv_princ.c:
	* encode.c:
	* k524init.c:
	* krb524d.c:
	* misc.c:
	* test.c: Don't include netdb.h or sys/socket.h if krb.h is
	included; this works around an Ultrix bug where those headers
	aren't protected against multiple inclusion.

Mon Aug 18 13:02:31 1997  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add AC_PROG_INSTALL as we do install here.

Mon Aug 11 21:12:11 1997  Tom Yu  <tlyu@mit.edu>

	* convt_tkt.c: Delete; it's not needed anymore.

	* test.c: Remove reference to krb524_convert_creds_addr, as that
	doesn't exist anymore.

	* conv_creds.c: Clean up substantially to be less convoluted.

	* sendmsg.c: Fix to not do a full series of timeouts on each
	server; loop over the whole list before increasing the timeout.

	* configure.in: Update to use the new library build system to
	build libkrb524.

	* Makefile.in: Update to reflect changes in the library.  Also,
	use the new library build system to build libkrb524.

Thu Aug  7 17:34:59 1997  Tom Yu  <tlyu@mit.edu>

	* cnv_tkt_skey.c:
	* krb524.h: